<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/delete_sheet"
    android:id="@+id/bottomSheet"
    android:orientation="vertical">

    <View

        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/delete_indicator_shape" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:gravity="center"
        android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
        android:text="@string/delete_dialog"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/delete_yes"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/yes_delete"
        android:fontFamily="@font/product_sans_bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/delete_no"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/no_delete"
        android:fontFamily="@font/product_sans_bold"/>




</LinearLayout>