<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/border_circular"
        android:id="@+id/filter">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_filter"/>

        <TextView
            android:id="@+id/nofilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/product_sans_regular"
            android:background="@drawable/filter_un_selected"
            android:text="@string/filter"/>

        <TextView
            android:id="@+id/lowtohigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/product_sans_regular"
            android:background="@drawable/filter_un_selected"
            android:text="@string/ascending"/>

        <TextView
            android:id="@+id/hightolow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/product_sans_regular"
            android:background="@drawable/filter_un_selected"
            android:text="@string/descending"/>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filter"
        android:padding="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newNotesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="26dp"
        android:src="@drawable/ic_add"/>

</RelativeLayout>