<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.InsertNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/notesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:background="@drawable/border_rectangle"
            android:padding="15dp"
            android:fontFamily="@font/product_sans_regular"/>

        <EditText
            android:id="@+id/notesSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/subtitle"
            android:inputType="textCapSentences"
            android:background="@drawable/border_rectangle"
            android:padding="15dp"
            android:fontFamily="@font/product_sans_regular"/>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/notesData"
            android:hint="@string/note"
            android:inputType="textCapSentences"
            android:gravity="start"
            android:background="@drawable/border_rectangle"
            android:padding="15dp"
            android:fontFamily="@font/product_sans_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="Priority :"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/product_sans_regular"/>
            <!--   android:textColor="@color/black" -->


            <ImageView
                android:id="@+id/greenPriority"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:background="@drawable/green_shape"/>


            <ImageView
                android:id="@+id/yellowPriority"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:background="@drawable/yellow_shape"/>


            <ImageView
                android:id="@+id/redPriority"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:background="@drawable/red_shape"/>

        </LinearLayout>

    </LinearLayout>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/doneNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="26dp"
        android:src="@drawable/ic_done"/>



</RelativeLayout>